initial changes to support GraalVM on JDK 13