@@ -102,6 +102,30 @@ public final class SubprocessUtil {
     }
 
     /**
+     * Gets the command line options to do the same package opening and exporting specified by the
+     * {@code --open-packages} option to the {@code mx unittest} command.
+     *
+     * Properties defined in {@code com.oracle.mxtool.junit.MxJUnitWrapper}.
+     */
+    public static List<String> getPackageOpeningOptions() {
+        List<String> result = new ArrayList<>();
+
+        String opens = System.getProperty("com.oracle.mxtool.junit.opens");
+        if (opens != null) {
+            for (String open : opens.split(System.lineSeparator())) {
+                result.add("--add-opens=" + open);
+            }
+        }
+        String exports = System.getProperty("com.oracle.mxtool.junit.exports");
+        if (exports != null) {
+            for (String export : exports.split(System.lineSeparator())) {
+                result.add("--add-exports=" + export);
+            }
+        }
+        return result;
+    }
+
+    /**
      * Gets the command line used to start the current Java VM, including all VM arguments, but not
      * including the main class or any Java arguments. This can be used to spawn an identical VM,
      * but running different Java code.
